# aiops-env

./: .gitignore  README.md  TESTING.md  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
